# display-sim

./: .appveyor.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  160.5fea72807ff239032f1b.js  160.8e14e030902b6cbf956b.js  160.92db00e87cb8640d8b21.js  160.ce10967c20209dc42f2a.js  160.d04dc65703bdf034eba9.js  160.e5364043a50f9e3fd466.js  333.41cd60d7002c630d3422.js  539.088261318b9325257498.js  59.0d22e219892ed79c871c.js  808.03d744388d6d03f31a0e.js  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  bundle.06648f022677c37e5f60.js  bundle.0cf23eb4c1ac54632efc.js  bundle.260ae57567202c8fbae0.js  bundle.35a804df4532ed050ecd.js  bundle.5b102aa9747128e8410d.js  bundle.5f94eb7b709955939a8c.js  bundle.6c7bc67887e6cdc46a45.js  bundle.6e48de3ab585ec565e3a.js  bundle.a66ea6eebbaa11afc91c.js  bundle.ada7120a6e0450051538.js  bundle.cdeebad74bab9c6d80e3.js  bundle.f3ff7ddc04b33962852a.js  bundle.ff8596de5a397c684d8a.js  bundle.ffbb0fa0e741dd44c6f3.js  clean.sh  commit.txt  dev_env.sh  docker-build.sh  index.html  linter.sh  (+9 more)
benchmarks/: Cargo.toml
benchmarks/benches/: whole_sim_bench.rs
crates/enum-len-trait/: Cargo.toml
crates/enum-len-trait/src/: lib.rs
crates/screen-sim-integration-test/: Cargo.toml
crates/screen-sim-integration-test/src/: lib.rs  tests.rs
crates/screen-sim-native-sdl2/: Cargo.toml
crates/screen-sim-native-sdl2/src/: lib.rs  native_entrypoint.rs  triangle_test.rs
crates/screen-sim-opengl-render/: Cargo.toml  build.rs
crates/screen-sim-opengl-render/src/: lib.rs  opengl_hooks.rs
crates/screen-sim-testing/: Cargo.toml
crates/screen-sim-testing/src/: fake.rs  main.rs
crates/screen-sim-testing/test/: faked_simulation_runs.rs
crates/screen-sim-web-exports/: Cargo.toml
crates/screen-sim-web-exports/src/: lib.rs  simulation_entrypoint.rs  wasm_exports.rs
crates/screen-sim-web-render/: Cargo.toml
crates/screen-sim-web-render/src/: blur_render.rs  lib.rs  render_types.rs  shaders.rs  simulation_draw.rs
crates/struct-iter-rs/: Cargo.toml
crates/struct-iter-rs/src/: lib.rs
docs/: 0.entrypoint.js  (+12 more)
native/sdl2/: Cargo.toml
native/sdl2/src/: main.rs
rust/display-sim-app-util/: Cargo.toml
rust/display-sim-app-util/src/: lib.rs
rust/display-sim-core/: Cargo.toml
rust/display-sim-core/src/: action_bindings.rs  app_events.rs  boolean_actions.rs  boolean_button.rs  button_actions.rs  camera.rs  field_changer.rs  filter_params.rs  general_types.rs  input_types.rs  internal_resolution.rs  lib.rs  math.rs  pixels_shadow.rs  simulation_context.rs  simulation_core_state.rs  simulation_core_ticker.rs  ui_controller.rs  view_controller.rs
rust/display-sim-core/src/ui_controller/: backlight_percent.rs  blur_passes.rs  brightness_color.rs  color_channels.rs  color_gamma.rs  color_noise.rs  cur_pixel_horizontal_gap.rs  cur_pixel_spread.rs  cur_pixel_vertical_gap.rs  enum_ui.rs  extra_bright.rs  extra_contrast.rs  filter_preset.rs  horizontal_lpp.rs  internal_resolution.rs  light_color.rs  pixel_geometry_kind.rs  pixel_shadow_height.rs  pixel_shadow_shape_kind.rs  rgb_calibration.rs  screen_curvature_kind.rs  texture_interpolation.rs  vertical_lpp.rs
rust/display-sim-native/: Cargo.toml
rust/display-sim-native-sdl2/: Cargo.toml
rust/display-sim-native-sdl2/src/: lib.rs  main.rs  native_entrypoint.rs  triangle_test.rs
rust/display-sim-native/src/: lib.rs  main.rs  native_entrypoint.rs
rust/display-sim-opengl-render/: Cargo.toml  build.rs
rust/display-sim-opengl-render/src/: lib.rs  opengl_hooks.rs
rust/display-sim-render/: Cargo.toml
rust/display-sim-render/src/: background_render.rs  blur_render.rs  internal_resolution_render.rs  lib.rs  pixels_render.rs  render_types.rs  rgb_render.rs  shaders.rs  simulation_draw.rs  simulation_render_state.rs
rust/display-sim-stub-render/: Cargo.toml  build.rs
rust/display-sim-stub-render/src/: glow_test_stub.rs  lib.rs  stubs.rs
rust/display-sim-testing/: Cargo.toml
rust/display-sim-testing/benches/: whole_sim_bench.rs
rust/display-sim-testing/src/: fake.rs  lib.rs  main.rs
rust/display-sim-testing/test/: faked_simulation_runs.rs
rust/display-sim-testing/tests/: faked_simulation_runs.rs
rust/display-sim-web-exports/: Cargo.toml
rust/display-sim-web-exports/src/: console.rs  dispatch_event.rs  lib.rs  pixels_render.rs  wasm_exports.rs  web_entrypoint.rs  web_events.rs  web_utils.rs
rust/display-sim-webgl-render/: Cargo.toml
rust/display-sim-webgl-render/src/: background_render.rs  blur_render.rs  internal_resolution_render.rs  lib.rs  pixels_render.rs  render_types.rs  rgb_render.rs  shaders.rs  simulation_draw.rs  simulation_render_state.rs
rust/enum-len-derive/: Cargo.toml
rust/enum-len-derive/src/: lib.rs
rust/screen-sim-native-sdl2/: Cargo.toml
rust/screen-sim-native-sdl2/src/: lib.rs  native_entrypoint.rs  triangle_test.rs
rust/screen-sim-webgl-render/: Cargo.toml
rust/screen-sim-webgl-render/src/: blur_render.rs  internal_resolution_render.rs  lib.rs  pixels_render.rs  render_types.rs  shaders.rs  simulation_draw.rs  simulation_render_state.rs
src/screen-sim-core/: Cargo.toml
src/screen-sim-core/src/: general_types.rs  internal_resolution.rs  lib.rs  simulation_context.rs  simulation_core_state.rs  simulation_update.rs
src/screen-sim-native/: Cargo.toml
src/screen-sim-native/src/: lib.rs
src/screen-sim-render/: Cargo.toml
src/screen-sim-render/src/: background_render.rs  blur_render.rs  internal_resolution_render.rs  lib.rs  pixels_render.rs  render_types.rs  rgb_render.rs  shaders.rs
src/screen-sim-web-common/: Cargo.toml
src/screen-sim-web-common/src/: lib.rs
src/screen-sim-web-entrypoint/: Cargo.toml
src/screen-sim-web-entrypoint/src/: dispatch_event.rs  lib.rs  pixels_render.rs  simulation_draw.rs  simulation_entrypoint.rs  web_entrypoint.rs  web_events.rs  web_utils.rs
src/screen-sim-web-render/: Cargo.toml
src/screen-sim-web-render/src/: background_render.rs  blur_render.rs  internal_resolution_render.rs  lib.rs  pixels_render.rs  render_types.rs  rgb_render.rs  shaders.rs  simulation_draw.rs  simulation_render_state.rs
(+333 files in other folders)
