[package]
name = "display-sim"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "rust/display-sim-wasm.rs"

[[bin]]
name = "display-sim-default-entrypoint"
path = "rust/display-sim-default-entrypoint.rs"

[profile.release]
debug = false
lto = true

[dependencies]
display-sim-web-exports = { path = "rust/display-sim-web-exports" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
display-sim-testing = { path = "rust/display-sim-testing" }

[workspace]
members = [
    "rust/enum-len-derive",
    "rust/enum-len-trait",
    "rust/glow-safe-adapter",
    "rust/display-sim-core",
    "rust/display-sim-render",
    "rust/display-sim-app-error",
    "rust/display-sim-web-exports",
    "rust/display-sim-native",
    "rust/display-sim-stub-render",
    "rust/display-sim-testing",
]
