[package]
name = "display-sim"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
description = "Tool for making image filters with emphasis in CRT aesthetics."
repository = "https://github.com/theypsilon/display-sim/"
license-file = "COPYING.txt"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]
path = "rust/display-sim-wasm.rs"

[[bin]]
name = "display-sim-default-entrypoint"
path = "rust/display-sim-default-entrypoint.rs"

[profile.release]
debug = false
lto = true
opt-level = "z"
codegen-units = 1
panic = 'abort'

[dependencies]
display-sim-web-exports = { path = "rust/display-sim-web-exports" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
display-sim-native = { path = "rust/display-sim-native" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
display-sim-native = { path = "rust/display-sim-native" }

[workspace]
members = [
    "rust/enum-len-derive",
    "rust/enum-len-trait",
    "rust/glow-safe-adapter",
    "rust/display-sim-core",
    "rust/display-sim-render",
    "rust/display-sim-app-util",
    "rust/display-sim-web-exports",
    "rust/display-sim-native",
    "rust/display-sim-stub-render",
    "rust/display-sim-testing",
]
