[package]
name = "screen-sim-benchmarks"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"
cargo-features = ["rename-dependency"]

[dev-dependencies]
criterion = "0.2.11"
screen-sim-test = { path = "../src/screen-sim-native", package = "screen-sim-native" }

[[bench]]
name = "whole_sim_bench"
harness = false