[package]
name = "screen-sim-integration-test"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[dependencies]
glm = { version = "0.1", package = "nalgebra-glm" }
render = { path = "../screen-sim-stub-render", package = "screen-sim-stub-render" }
core = { path = "../screen-sim-core", package = "screen-sim-core" }
