[package]
name = "screen-sim-opengl-render"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.10.0"
derive-new = "0.5.6"
glm = { version = "0.1", package = "nalgebra-glm" }
core = { path = "../screen-sim-core", package = "screen-sim-core" }

[build-dependencies]
build-tools = { path = "../screen-sim-build-tools", package = "screen-sim-build-tools" }