[package]
name = "screen-sim-web-exports"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[lib]
test = false

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.40"
js-sys = "0.3.17"
glm = { version = "0.1", package = "nalgebra-glm" }
paste = "0.1.4"
core = { path = "../screen-sim-core", package = "screen-sim-core" }
web-error = { path = "../screen-sim-web-error", package = "screen-sim-web-error" }
derive-new = "0.5.6"

[dependencies.render]
path = "../screen-sim-web-render"
package = "screen-sim-web-render"
features = [
  'web_api'
]

[dependencies.web-sys]
version = "0.3.17"
features = [
  'console',
  'Window',
  'Performance',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'CustomEvent',
  'CustomEventInit',
  'KeyboardEvent',
  'MouseEvent',
  'WheelEvent',
]