[package]
name = "struct-iter"
version = "0.2.6"
authors = ["José Manuel Barroso Galindo <theypsilon@gmail.com>"]
license = "MIT"
edition = "2018"

description = "Derive macro for adding a getter method for each type in the struct."
readme = "README.md"
documentation = "https://docs.rs/struct-iter"

repository = "https://github.com/theypsilon/struct-iter-rs"
keywords = ["getter", "struct", "derive", "field", "iter"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4.27"
lazy_static = "1.3.0"

[dependencies.syn]
version = "0.15"
features = ["extra-traits"]