[package]
name = "screen-sim-native-sdl2"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[profile.release]
debug = false
lto = true

[dependencies]
gl = "0.10.0"
glm = { version = "0.1", package = "nalgebra-glm" }
webgl-to-sdl2 = { path = "../../src/screen-sim-webgl-to-sdl2", package = "screen-sim-webgl-to-sdl2" }
core = { path = "../../src/screen-sim-core", package = "screen-sim-core" }

[dependencies.render]
path = "../../src/screen-sim-web-render"
package = "screen-sim-web-render"
default-features = false
features = [
  'webgl_to_sdl2',
]

[dependencies.sdl2]
version = "0.31.0"
features = ["bundled", "static-link"]