[package]
name = "display-sim-app-util"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.81"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.58"
features = ['console']
