[package]
name = "display-sim-core"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[dependencies]
glm = { version = "0.17", package = "nalgebra-glm" }
num-traits = "0.2.14"
num-derive = "0.3.3"
arraygen = "0.3.2"
enum-len-derive = { path = "../enum-len-derive" }
enum-len-trait = { path = "../enum-len-trait" }
derive-new = "0.5.9"
app-error = { path = "../display-sim-app-error", package = "display-sim-app-error" }
