[package]
name = "display-sim-native-sdl2"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
test = false

[dependencies]
image = "0.21.0"
gl = "0.12.0"
glm = { version = "0.1", package = "nalgebra-glm" }
render = { path = "../display-sim-opengl-render", package = "display-sim-opengl-render" }
core = { path = "../display-sim-core", package = "display-sim-core" }

[dependencies.sdl2]
version = "0.32.2"
features = ["bundled", "static-link"]