[package]
name = "display-sim-native"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[lib]
test = false

[dependencies]
image = "0.23.14"
glm = { version = "0.5", package = "nalgebra-glm" }
render = { path = "../display-sim-render", package = "display-sim-render" }
core = { path = "../display-sim-core", package = "display-sim-core" }
rand = "0.7.2"
glutin = "0.28.0"
glow = { path = "../glow-safe-adapter", package = "glow-safe-adapter" }
