[package]
name = "display-sim-opengl-render"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.12.0"
derive-new = "0.5.6"
glm = { version = "0.1", package = "nalgebra-glm" }
core = { path = "../display-sim-core", package = "display-sim-core" }

[build-dependencies]
build-tools = { path = "../display-sim-build-tools", package = "display-sim-build-tools" }
webgl-render = { path = "../display-sim-webgl-render", package = "display-sim-webgl-render" }