[package]
name = "display-sim-render"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[dependencies]
derive-new = "0.5.6"
glm = { version = "0.5", package = "nalgebra-glm" }
core = { path = "../display-sim-core", package = "display-sim-core" }
app-error = { path = "../display-sim-app-error", package = "display-sim-app-error" }
glow = { path = "../glow-safe-adapter", package = "glow-safe-adapter" }