[package]
name = "display-sim-render"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[dependencies]
derive-new = "0.5.9"
glm = { version = "0.17", package = "nalgebra-glm" }
core = { path = "../display-sim-core", package = "display-sim-core" }
app-util = { path = "../display-sim-app-util", package = "display-sim-app-util" }
glow = { path = "../glow-safe-adapter", package = "glow-safe-adapter" }