[package]
name = "display-sim-stub-render"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[dependencies]
derive-new = "0.5.6"
glm = { version = "0.5", package = "nalgebra-glm" }
core = { path = "../display-sim-core", package = "display-sim-core" }
app-error = { path = "../display-sim-app-error", package = "display-sim-app-error" }

[build-dependencies]
render = { path = "../display-sim-render", package = "display-sim-render" }
glob = "0.3.0"