[package]
name = "display-sim-web-exports"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[lib]
test = false

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.55"
js-sys = "0.3.32"
glm = { version = "0.17", package = "nalgebra-glm" }
paste = "0.1.4"
core = { path = "../display-sim-core", package = "display-sim-core" }
app-error = { path = "../display-sim-app-error", package = "display-sim-app-error" }
derive-new = "0.5.6"
glow = { path = "../glow-safe-adapter", package = "glow-safe-adapter" }

[dependencies.render]
path = "../display-sim-render"
package = "display-sim-render"

[dependencies.web-sys]
version = "0.3.58"
features = [
  'console',
  'Window',
  'Performance',
  'Document',
  'Element',
]

[dependencies.rand]
version = "0.7.2"
features = ["wasm-bindgen"]
