[package]
name = "display-sim-web-exports"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[lib]
test = false

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.81"
js-sys = "0.3.58"
glm = { version = "0.17", package = "nalgebra-glm" }
paste = "1.0.7"
core = { path = "../display-sim-core", package = "display-sim-core" }
app-error = { path = "../display-sim-app-error", package = "display-sim-app-error" }
derive-new = "0.5.9"
glow = { path = "../glow-safe-adapter", package = "glow-safe-adapter" }
rand = "0.8.5"

[dependencies.render]
path = "../display-sim-render"
package = "display-sim-render"

[dependencies.web-sys]
version = "0.3.58"
features = [
  'console',
  'Window',
  'Performance',
  'Document',
  'Element',
]

[dependencies.getrandom]
version = "0.2.0"
features = ["js"]