[package]
name = "enum-len-derive"
version = "0.1.0"
authors = ["José Manuel Barroso Galindo <theypsilon@gmail.com>"]
license = "MIT"
edition = "2018"

description = "Derive macro for adding a getter method for each type in the struct."
readme = "README.md"
documentation = "https://docs.rs/enum-len-derive"

repository = "https://github.com/theypsilon/enum-len-derive-rs"
keywords = ["enum", "len", "derive", "variant", "count"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.20"
enum-len-trait = { path = "../enum-len-trait" }

[dependencies.syn]
version = "1.0.98"
