[package]
name = "screen-sim-native-sdl2"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[lib]
test = false

[dependencies]
image = "0.21.0"
gl = "0.12.0"
glm = { version = "0.1", package = "nalgebra-glm" }
render = { path = "../screen-sim-opengl-render", package = "screen-sim-opengl-render" }
core = { path = "../screen-sim-core", package = "screen-sim-core" }

[dependencies.sdl2]
version = "0.32.2"
features = ["bundled", "static-link"]