[package]
name = "screen-sim-webgl-render"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[features]
web_api = []
webgl_stubs = []
webgl_to_opengl_hooks = []

[dependencies]
derive-new = "0.5.6"
glm = { version = "0.1", package = "nalgebra-glm" }
core = { path = "../screen-sim-core", package = "screen-sim-core" }
web-error = { path = "../screen-sim-web-error", package = "screen-sim-web-error" }

[dependencies.web-sys]
version = "0.3.19"
features = [
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation',
  'WebGlTexture',
  'WebGlFramebuffer',
  'WebGlRenderbuffer'
]