[package]
name = "screen-sim-core"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"
cargo-features = ["rename-dependency"]

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
glm = { version = "0.1", package = "nalgebra-glm" }
num-traits = "0.2"
num-derive = "0.2"
getters-by-type = "0.2"
enum-len-derive = { path = "../external_crates/enum-len-derive" }
enum-len-trait = { path = "../external_crates/enum-len-trait" }
derive-new = "0.5.6"