[package]
name = "screen-sim-native"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"

[dependencies]
glm = { version = "0.1", package = "nalgebra-glm" }
native-stub = { path = "../screen-sim-native-stub", package = "screen-sim-native-stub" }
core = { path = "../screen-sim-core", package = "screen-sim-core" }

[dependencies.render]
path = "../screen-sim-web-render"
package = "screen-sim-web-render"
features = [
  'native',
]