[package]
name = "screen-sim-render"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"
cargo-features = ["rename-dependency"]

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.40"
js-sys = "0.3.17"
glm = { version = "0.1", package = "nalgebra-glm" }
paste = "0.1.4"
num-traits = "0.2"
num-derive = "0.2"
getters-by-type = "0.2"
enum-len-derive = { path = "../crates/enum-len-derive" }
enum-len-trait = { path = "../crates/enum-len-trait" }
core = { path = "../screen-sim-core", package = "screen-sim-core" }
web-base = { path = "../screen-sim-web-base", package = "screen-sim-web-base" }
derive-new = "0.5.6"

[dependencies.web-sys]
version = "0.3.17"
features = [
  'console',
  'Performance',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'CustomEvent',
  'CustomEventInit',
  'KeyboardEvent',
  'MouseEvent',
  'WheelEvent',
  'Window',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation',
  'WebGlTexture',
  'WebGlFramebuffer',
  'WebGlRenderbuffer',
]