[package]
name = "screen-sim-web-common"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"
cargo-features = ["rename-dependency"]

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.40"
js-sys = "0.3.17"

[dependencies.web-sys]
version = "0.3.17"
features = [
  'Performance',
  'Window',
]