[package]
name = "screen-sim-web-render"
version = "0.1.0"
authors = ["José manuel Barroso Galindo <theypsilon@gmail.com>"]
edition = "2018"
cargo-features = ["rename-dependency"]

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.40"
js-sys = "0.3.17"
glm = { version = "0.1", package = "nalgebra-glm" }
core = { path = "../screen-sim-core", package = "screen-sim-core" }
web-common = { path = "../screen-sim-web-common", package = "screen-sim-web-common" }
derive-new = "0.5.6"

[dependencies.web-sys]
version = "0.3.17"
features = [
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation',
  'WebGlTexture',
  'WebGlFramebuffer',
  'WebGlRenderbuffer',
]